--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Hunt Town",
+  "name": "hunttown",
   "version": "0.1.0",
   "description": "Web3 Builders Town",
   "devDependencies": {
@@ -8,5 +8,10 @@
     "@openzeppelin/contracts": "^4.7.3",
     "dotenv": "^16.0.3",
     "hardhat": "^2.12.0"
+  },
+  "dependencies": {
+    "@uniswap/v3-periphery": "^1.4.3",
+    "ethereum-waffle": "^3.4.4",
+    "prettier-plugin-solidity": "^1.1.0"
   }
 }
