--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@nomicfoundation/hardhat-toolbox": "^2.0.0",
     "@nomiclabs/hardhat-solhint": "^2.0.1",
     "@openzeppelin/contracts": "^4.7.3",
+    "@uniswap/v3-periphery": "^1.4.3",
     "dotenv": "^16.0.3",
     "hardhat": "^2.12.0"
   }
