--- a/package.json
+++ b/package.json
@@ -10,14 +10,19 @@
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "prettier": "^2.8.1"
+    "prettier": "^2.8.1",
+    "solidity-bytes-utils": "^0.8.0"
   },
   "dependencies": {
     "@nomicfoundation/hardhat-network-helpers": "^1.0.7",
     "@nomicfoundation/hardhat-toolbox": "^2.0.0",
-    "hardhat": "^2.12.0",
+    "@uniswap/router-sdk": "^1.4.0",
+    "@uniswap/sdk-core": "^3.1.1",
+    "@uniswap/smart-order-router": "^3.4.0",
+    "@uniswap/v3-sdk": "^3.9.0",
+    "chai": "^4.3.7",
     "dotenv": "^16.0.3",
-    "chai": "^4.3.7"
+    "hardhat": "^2.12.0"
   },
   "engines": {
     "node": ">=16.0.0"
