Fix package name

--- a/TownHall/package.json
+++ b/TownHall/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Hunt Town",
+  "name": "hunt-town",
   "version": "1.0.0",
   "description": "Web3 Builders Town",
   "devDependencies": {
