--- a/.prettierrc
+++ b/.prettierrc
@@ -1,8 +1,7 @@
 {
     "semi": true,
     "printWidth": 120,
-    "singleQuote": true,
-    "tabWidth": 2,
+    "singleQuote": false,
     "trailingComma": "none"
 }
 
