--- a/Grant/package.json
+++ b/Grant/package.json
@@ -10,10 +10,11 @@
   "license": "BSD-3-Clause",
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox-viem": "^3.0.0",
-    "hardhat": "^2.22.5"
+    "hardhat": "^2.22.5",
+    "hardhat-chai-matchers-viem": "^2.0.8"
   },
   "dependencies": {
-    "dotenv": "^16.4.5",
-    "@openzeppelin/contracts": "^5.0.2"
+    "@openzeppelin/contracts": "^5.0.2",
+    "dotenv": "^16.4.5"
   }
 }
