--- a/Grant/package.json
+++ b/Grant/package.json
@@ -15,6 +15,8 @@
   },
   "dependencies": {
     "@openzeppelin/contracts": "^5.0.2",
-    "dotenv": "^16.4.5"
+    "dotenv": "^16.4.5",
+    "keccak256": "^1.0.6",
+    "merkletreejs": "^0.3.11"
   }
 }
