Further gas optimizations

--- a/MintPad/package.json
+++ b/MintPad/package.json
@@ -2,6 +2,9 @@
   "name": "MintPad",
   "version": "1.0.0",
   "type": "module",
+  "scripts": {
+    "test": "hardhat test"
+  },
   "devDependencies": {
     "@nomicfoundation/hardhat-ignition": "^3.0.3",
     "@nomicfoundation/hardhat-toolbox-viem": "^5.0.0",
